# craft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bam/: CMakeLists.txt  program.cpp
midi-recorder/: CMakeLists.txt  instrumentselectiondialog.cpp  instrumentselectiondialog.h  instrumentselectiondialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mastermixerwidget.cpp  mastermixerwidget.h  mastermixerwidget.ui  midi-recorder.cpp  midiclip.cpp  midiclip.h  midiicon.rc  midiplayer.cpp  midiplayer.h  midirecorder.cpp  midirecorder.h  mixer.h  noteview.cpp  noteview.h  program.cpp  resources.qrc
midi-recorder/EffectsUI/: alienwahform.cpp  alienwahform.h  alienwahform.ui  chorusform.cpp  chorusform.h  chorusform.ui  distorsionform.cpp  distorsionform.h  distorsionform.ui  dynfilterform.cpp  dynfilterform.h  dynfilterform.ui  echoform.cpp  echoform.h  echoform.ui  eq-drawing.txt  eqform.cpp  eqform.h  eqform.ui  phaserform.cpp  phaserform.h  phaserform.ui  reverbform.cpp  reverbform.h  reverbform.ui
whoosh/: CMakeLists.txt  program.cpp
